# dSense

./: .gitignore  AUTOTEST_GUIDE.md  BASELINE_GENERATION_GUIDE.md  BASELINE_GENERATION_SUMMARY.md  DATASET_REVIEW.md  README.md  SESSION_SUMMARY.md  pyproject.toml
.github/workflows/: pytest.yml
docs/: dataset-format.md  frame-format.md  research-roadmap.md
dsense/: __init__.py  autotest.py  baseline.py  baseline_suite.py  classifier.py  cli.py  contrastive.py  council.py  doctor.py  event_detector.py  frame.py  gemma_edge.py  inputs.py  manifest.py  orbiters.py  perf.py  privacy.py  quality.py  recorder.py  replay.py  scenarios.py  startup_progress.py  telemetry.py  timeseries.py  trace.py  transfer.py  tui.py  tui_app.py  tui_jobs.py  tui_live.py  tui_recording.py  tui_render.py  tui_state.py  watcher.py  wizard.py  workloads.py
dsense/channels/: __init__.py  base.py  clock_delta.py  cpu_load.py  (+8 more)
scene_packs/: starter_walkby.json
scripts/: README.md  generate_all_baselines.py  generate_baseline_dataset.py  generate_system_activity_dataset.py  scenarios.py
tests/: conftest.py  test_auto_scenes.py  test_autotest.py  test_baseline.py  test_baseline_suite.py  test_channels_extended.py  test_classifier.py  test_contrastive.py  test_council.py  test_doctor_cli.py  test_event_detector.py  test_frame.py  test_gemma_edge.py  test_intelligence_cache.py  test_manifest.py  test_network_channel.py  test_phase7.py  test_quality.py  test_recorder_progress.py  test_startup_progress.py  test_timeseries.py  test_tui_live.py  test_tui_project.py  test_watcher_orbiters_transfer.py
(+7 files in other folders)
