[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dsense"
version = "0.1.0"
description = "dSense Scene Wizard for labeled substrate-signal capture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "dSense contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
dsense = "dsense.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
