[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dsense"
version = "0.1.0"
description = "dSense Scene Wizard for labeled substrate-signal capture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "dSense contributors"}]
dependencies = []

[project.optional-dependencies]
tui = ["textual", "rich"]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
dsense = "dsense.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["dsense*"]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = ["E9", "F"]
